added user authentication using passport and sessions

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,10 +2,16 @@
 
 <!-- body -->
 <header>
+
+   
+
     <div class="dababy">
         <img src="/dababy.png" alt="">
     </div>
 
+    <form action="/auth/logout?_method=DELETE" method="POST">
+        <button type="submit">Logout</button>
+    </form>
     
 
 </header>
