--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,6 +34,10 @@
                 height: 400px;
                 width: 400px;
             }
+
+            #error{
+                color: red;
+            }
     </style>
 </head>
 <body>
