added reviews products and a page to add the products (temporary)

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
    
 
     <div class="dababy">
-        <img src="/dababy.png" alt="">
+        <img src="/products/dababy.png" alt="">
     </div>
 
     <form action="/auth/logout?_method=DELETE" method="POST">
