--- a/views/productSubmit.ejs
+++ b/views/productSubmit.ejs
@@ -5,7 +5,7 @@
 
 
 
-    <form action="/products/add" method="POST">
+    <form action="/products/add" method="POST" enctype="multipart/form-data">
         <label for="title">Title</label>
         <input type="text" name="title" required>
         <br>
@@ -19,8 +19,8 @@
         <input type="number" name="rating" max="5" min="1">
         <br>
         
-        <label for="imagepath">ImagePath</label>
-        <input type="text" name="imagepath">
+        <label for="image">ImagePath</label>
+        <input type="file" name="image">
         <br>
 
         <button type="submit">Submit</button>
