--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,13 +1,20 @@
 <%- include('partials/header.ejs') %>
 
+
+
 <!-- body -->
 <header>
 
 
-    <h2>Products</h2>
-    <div class="container">
+    <h2 class="product_price" style="margin:5px 0">Products</h2>
+    <p>Searching: </p>
+    <form action="/products" method="GET">
+        <input type="text" name="title" id="title" value="<%= value %>">
 
-    
+        <button type="submit">Search</button>
+    </form>
+
+    <div class="container" id="container" style="padding: 10px">
     <% products.forEach(product => { %>
         <div style="width: 200px;">
             <a href="/products/<%= product._id %>" style="text-decoration: none;color: black">
@@ -18,6 +25,8 @@
     <% }) %>
     </div>
     <a href="/products/add">Add product</a>
+
+    
 
 </header>
 
