added cart system (only post database done)

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,6 +17,7 @@
             <li><a href="/auth/signup">Signup</a></li>
             <li><a href="/products">products</a></li>
             <li><a href="/aboutus">About us</a></li>
+            <li><a href="/cart">Cart</a></li>
         </ul>
     </nav>
 </body>
