--- a/views/productSubmit.ejs
+++ b/views/productSubmit.ejs
@@ -12,15 +12,19 @@
         <label for="price">Price</label>
         <input type="number" name="price" required>
         <br>
+
+        <label for="shippingCost">Shipping Cost</label>
+        <input type="number" name="shippingCost" required>
+        <br>
         <label for="description">Description</label>
         <textarea name="description"></textarea>
         <br>
         <label for="rating">Rating</label>
-        <input type="number" name="rating" max="5" min="1">
+        <input type="number" name="rating" max="5" min="1" required>
         <br>
-        
+
         <label for="image">ImagePath</label>
-        <input type="file" name="image">
+        <input type="file" name="image" required>
         <br>
 
         <button type="submit">Submit</button>
