--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,9 +5,35 @@
 
    
 
-    <div class="dababy">
-        <img src="/products/dababy.png" alt="">
-    </div>
+    <div class="header-section">
+        <h1 class="header-heading"><span>YOUNIQUE</span> AESTHETICS</h1>
+   </div>
+
+   <!--Best selling products-->
+   <section class="best-selling-products-section">
+        <h1 class="section-title">Best Selling Products</h1>
+        <div class="product-container">
+             <div class="product-card">
+                  <img src="/statics/p1.jpg" class="product-img" alt="">
+                  <p class="product-name">Welcome Boots</p>
+             </div>
+   
+             <div class="product-card">
+                  <img src="/statics/p2.jpg" class="product-img" alt="">
+                  <p class="product-name">Flower Yourself</p>
+             </div>
+        
+             <div class="product-card">
+                  <img src="/statics/p3.jpg" class="product-img" alt="">
+                  <p class="product-name">Crooked Brush</p>
+             </div>
+        
+             <div class="product-card">
+                  <img src="/statics/p4.jpg" class="product-img" alt="">
+                  <p class="product-name">No-touch Chair</p>
+             </div>
+        </div>
+   </section>
 
     <form action="/auth/logout?_method=DELETE" method="POST">
         <button type="submit">Logout</button>
