--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,38 +1,174 @@
-ul {
-    list-style-type: none;
+*{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    }
+    font-family: 'cinzel', serif;
+}
 
-    li {
-    float: left;
-    }
+.header-section{
+    width: 100%;
+    height: 100vh;
+    background: url("/statics/img-2.jpg");
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-    li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
+.header-heading{
+    font-size: 70px;
+    text-transform: capitalize;
+    color: #fff;
+}
+
+.header-heading span{
+    color:#d5be8b
+}
+
+.navbar{
+    width: 100%;
+    height: 80px;
+    position: fixed;
+    top:0;
+    left:0;
+    display:flex;
+    justify-content: center;
+    z-index: 9;
+    transition: 0.5s;
+}
+
+.links-container{
+    display: flex;
+    align-items: center;
+    list-style: none;
+}
+
+.link-item{
+    margin:10px;
+}
+
+.link{
+    font-size: 20px;
+    color: #fff;
     text-decoration: none;
-    }
+    padding: 10px;
+    opacity: 0.7;
+    transition: 0.5s;
+}
 
-    /* Change the link color to #111 (black) on hover */
-    li a:hover {
-    background-color: #111;
-    }
+.link.active, .link:hover{
+    opacity: 1;
+}
 
-    .dababy img{
-        height: 400px;
-        width: 400px;
-    }
+.user-interactions{
+    display: flex;
+    position: absolute;
+    right: 5vw;
+    top:50%;
+    transform: translateY(-50%);
+}
 
-    #error{
-        color: red;
-    }
+.cart, .user{
+    width: 30px;
+    height: 30px;
+    position: relative;
+    margin: 10px;
+    cursor: pointer;
+}
 
-    .container{
-        display: flex;
-        
-    }
+.cart-item-count{
+    font-family: 'lato', sans-serif;
+    color: #d5be8b;
+    padding: 5px;
+    font-size: 15px;
+    border-radius: 50%;
+    background: #190c05;
+    position: absolute;
+    bottom: -12px;
+    left: -12px;
+}
+
+.cart-icon, .user-icon{
+    width:100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.best-selling-products-section{
+    position: relative;
+    padding: 60px 5vw;
+    background-color: rgb(62, 62, 62);
+}
+
+.section-title{
+    text-transform: capitalize;
+    font-size: 30px;
+    margin-bottom:30px;
+    color:#fff;
+    justify-content: center;
+}
+
+.product-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.product-card{
+    border: 15px solid #d5be8b;
+    width: 300px;
+    height: 300px;
+    overflow:hidden;
+    position: relative;
+    background: #d5be8b;
+}
+
+.product-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: .5s;
+}
+
+.product-name{
+    position: absolute;
+    color: #fff;
+    text-transform: capitalize;
+    font-family: 'lato', sans-serif;
+    font-size: 25px;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: .5s;
+}
+
+.product-card:hover .product-name{
+    opacity: 1;
+}
+
+.product-card:hover .product-img{
+    opacity:0.5;
+}
+
+nav {
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+}
+
+nav a {
+    color: #fff;
+    text-decoration: none;
+    margin-right: 20px;
+    font-size: 18px;
+}
+
+nav a:hover {
+    color: #d5be80;
+}
