--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,19 +1,115 @@
 <%- include('partials/header.ejs') %>
 
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background-image: url("/statics/1649240727interior-design-ideas-of-2022-banner.jpg");
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        color: #fff;
+    }
 
+    h1 {
+        text-align: center;
+        margin-top: 110px;
+        color: #fff;
+        font-weight: bold;
+        font-size: 36px;
+        text-shadow: 1px 1px 1px #ccc;
+    }
+
+    form {
+        background-color: #fff;
+        border: 1px solid #ddd;
+        padding: 30px;
+        margin: 50px auto;
+        max-width: 500px;
+        box-shadow: 0px 0px 10px #ccc;
+    }
+
+    label {
+        display: block;
+        margin-bottom: 10px;
+        color: #666;
+        font-size: 18px;
+    }
+
+    input[type="text"], input[type="password"] {
+        display: block;
+        width: 100%;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        margin-bottom: 20px;
+        box-sizing: border-box;
+        font-size: 16px;
+    }
+
+    input[type="submit"] {
+        background-color: #666;
+        color: #fff;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        font-size: 18px;
+        cursor: pointer;
+    }
+
+    input[type="submit"]:hover {
+        background-color: #d5be80;
+    }
+
+    .new-account-link {
+        display: block;
+        margin-top: 20px;
+        text-align: center;
+        color: #666;
+        text-decoration: none;
+        font-size: 16px;
+    }
+
+    .new-account-link:hover {
+        color: #d5be80;
+    }
+
+    nav {
+        background-color: #333;
+        color: #fff;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1;
+    }
+
+    nav a {
+        color: #fff;
+        text-decoration: none;
+        margin-right: 20px;
+        font-size: 18px;
+    }
+
+    nav a:hover {
+        color: #d5be80;
+    }
+</style>
 <!-- body -->
 <h1>Login</h1>
 <form action="/auth/login" method="POST">
-    <div>
+    
         <label for="email">Email</label>
         <input type="text" id="email" name="email" required>
-    </div>
-    <div>
+
+
+    
         <label for="password">Password</label>
         <input type="password" id="password" name="password" required>
-    </div>
 
-    <button type="submit">Login</button>
+        <input type="submit" value="Log In">
+        <a href="/auth/signup" class="new-account-link">New here? Create an account</a>
 </form>
 <% if (messages.error){ %>
     <p id="error"><%= messages.error %></p>
